--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-apple-authentication": "~6.4.2",
+    "expo-document-picker": "~12.0.2",
     "expo-google-sign-in": "^10.2.0",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.0",
@@ -23,8 +25,7 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-document-picker": "~12.0.2"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
