--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "expo": "~51.0.28",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "~51.0.37",
     "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "~5.5.2",
     "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-google-sign-in": "^10.2.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.14.0",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
