--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-google-sign-in": "^10.2.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
+    "expo-modules-core": "^1.12.26",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
@@ -35,15 +36,16 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pdf": "^6.7.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-pdf-lib": "^1.0.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.12.3"
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
