--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "entities": "^5.0.0",
     "expo": "~51.0.37",
     "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "~5.5.2",
@@ -38,11 +39,13 @@
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-htmlview": "^0.17.0",
     "react-native-pdf": "^6.7.5",
     "react-native-pdf-lib": "^1.0.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-tesseract-ocr": "^2.0.3",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.8.6"
