--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-modules-core": "^1.12.26",
+    "expo-random": "~14.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
@@ -45,6 +46,7 @@
     "react-native-htmlview": "^0.17.0",
     "react-native-pdf": "^6.7.5",
     "react-native-pdf-lib": "^1.0.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
@@ -52,8 +54,7 @@
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6",
-    "expo-random": "~14.0.1"
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
