--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -29,16 +29,16 @@
     "expo-google-sign-in": "^10.2.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-modules-core": "^1.12.26",
+    "expo-modules-core": "~1.12.26",
     "expo-random": "~14.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.14.1",
+    "firebase": "^11.0.1",
     "hermes-engine": "^0.11.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.7.76",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
@@ -48,17 +48,18 @@
     "react-native-pdf-lib": "^1.0.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-tesseract-ocr": "^2.0.3",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-transform-class-static-block": "^7.25.8"
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-class-static-block": "^7.25.8",
+    "expo-module-scripts": "^3.5.2"
   },
   "private": true
 }
