--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "entities": "^5.0.0",
-    "expo": "~51.0.37",
+    "expo": "^51.0.38",
     "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "~5.5.2",
     "expo-document-picker": "~12.0.2",
@@ -46,7 +46,6 @@
     "react-native-htmlview": "^0.17.0",
     "react-native-pdf": "^6.7.5",
     "react-native-pdf-lib": "^1.0.0",
-    "react-native-picker-select": "^9.3.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
