--- a/package.json
+++ b/package.json
@@ -9,56 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/cli-server-api": "^15.0.0",
+    "@react-native-firebase/app": "^21.2.0",
+    "@react-native-firebase/auth": "^21.2.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "entities": "^5.0.0",
     "expo": "^51.0.38",
-    "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "~5.5.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-google-sign-in": "^10.2.0",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-modules-core": "~1.12.26",
-    "expo-random": "~14.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
-    "hermes-engine": "^0.11.0",
-    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.7.76",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-htmlview": "^0.17.0",
-    "react-native-pdf": "^6.7.5",
-    "react-native-pdf-lib": "^1.0.0",
-    "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-tesseract-ocr": "^2.0.3",
-    "react-native-tts": "^4.1.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "^13.8.6",
+    "expo-notifications": "~0.28.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/plugin-transform-class-static-block": "^7.25.8",
-    "expo-module-scripts": "^3.5.2"
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-class-static-block": "^7.26.0"
   },
   "private": true
 }
