--- a/package.json
+++ b/package.json
@@ -10,36 +10,41 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^15.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.2.0",
+    "@react-native-firebase/messaging": "^21.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
-    "expo": "^51.0.38",
+    "expo": "^51.0.0",
     "expo-auth-session": "~5.5.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.28.19",
+    "expo-random": "~14.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "pdfjs-dist": "^4.7.76",
-    "react": "^18.2.0",
-    "react-native": "^0.74.5",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.8.6"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-transform-class-static-block": "^7.26.0"
   },
   "private": true
