--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/cli-server-api": "^15.0.0",
+    "@react-native-community/cli-server-api": "^15.0.1-alpha.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.2.0",
@@ -21,15 +21,12 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "axios": "^1.7.7",
     "expo": "^51.0.0",
     "expo-auth-session": "~5.5.2",
     "expo-document-picker": "~12.0.2",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-notifications": "~0.28.19",
-    "expo-random": "~14.0.1",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
@@ -37,10 +34,11 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.8.6"
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
