--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli-server-api": "^15.0.1-alpha.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.2.0",
@@ -34,8 +34,8 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.20.2",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0"
