--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "expo": {
     "name": "E-Book",
-    "slug": "E-Book",
+    "slug": "e-book",
     "scheme": "E-Book",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -17,17 +18,28 @@
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "This app requires access to your photo library to select files.",
         "NSDocumentDirectoryUsageDescription": "This app requires access to your documents."
-      }
+      },
+      "bundleIdentifier": "com.pragalathan22.ebook"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "permissions": ["READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
+      "permissions": [
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "package": "com.pragalathan22.ebook"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7a72ddc4-87f6-4ad5-949f-90dbe4c0dd48"
+      }
+    },
+    "owner": "pragalathan22"
   }
 }
