--- a/eas.json
+++ b/eas.json
@@ -5,11 +5,21 @@
   },
   "build": {
     "preview": {
-      "ios": {
-        "simulator": true
+      "android": {
+        "buildType": "apk"
       }
     },
-    "production": {}
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
